--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,5 +7,10 @@
     .NavIteam {
         @apply font-semibold tracking-wide cursor-pointer text-gray-400 hover:text-white text-xl
     }
+    
+    .btn {
+        @apply bg-black text-center p-2 cursor-pointer text-white rounded-full mx-10 m-5  hover:animate-pulse hover:bg-white hover:text-black hover:border-dashed hover:font-semibold hover:shadow-xl  transition ease-in-out duration-300
+    }
+    
 
 }
